Updates poster to include source

--- a/poster.html
+++ b/poster.html
@@ -8,7 +8,6 @@
       name="viewport"
       content="height=device-height, width=device-width, initial-scale=1"
     />
-    <!-- Based on a poster template from https://github.com/cpitclaudel/academic-poster-template -->
 
     <script
       type="text/javascript"
@@ -75,6 +74,12 @@
                 href="CSG-support-services.html"
                 class="text-blue-500 underline"
                 >City St George's Support Services</a
+              >
+            </li>
+            <li>
+              Based on an
+              <a href="https://github.com/cpitclaudel/academic-poster-template"
+                >open poster template.</a
               >
             </li>
           </ul>
@@ -476,7 +481,6 @@
           </tr>
         </table>
       </section>
- 
     </main>
 
     <!-- <footer>
