Fixes typo in relevance for PTs

--- a/poster.html
+++ b/poster.html
@@ -51,7 +51,7 @@
           </a>
           <br />
           <a property="sourceOrganization">
-            1 - City St George's, University of London
+            1 City St George's, University of London
           </a>
         </address>
         <span class="publication-info">
@@ -329,7 +329,7 @@
         />
         <div class="shaded-box">
           <ul>
-            <li>64% of City's students commute students commute</li>
+            <li>64% of City's students students commute</li>
             <li>
               50% of City home student's population come from IMD Q1 & 2
               neighbourhoods
