--- a/poster.html
+++ b/poster.html
@@ -329,7 +329,7 @@
         />
         <div class="shaded-box">
           <ul>
-            <li>64% of City's students students commute</li>
+            <li>64% of City's students commute</li>
             <li>
               50% of City home student's population come from IMD Q1 & 2
               neighbourhoods
